--- a/.changelog/v3.0.0.0.preview.5.0.md
+++ b/.changelog/v3.0.0.0.preview.5.0.md
@@ -1,5 +1,5 @@
 > 对应核心版本: [v3.0.0.preview.10.0](https://github.com/ForteScarlet/simpler-robot/releases/tag/v3.0.0.preview.10.0)
 
-调整依赖传递规则。
+调整依赖传递规则, `love.forte.simbot:*` 和 `love.forte.simbot.boot:*` 下依赖规则调整为仅编译。
 
 ## 变更日志
