--- a/.changelog/v3.0.0.0-M6.md
+++ b/.changelog/v3.0.0.0-M6.md
@@ -5,6 +5,7 @@
 | [simbot核心库](https://github.com/simple-robot/simpler-robot) | [`v3.0.0-RC.3`](https://github.com/simple-robot/simpler-robot/releases/tag/v3.0.0-RC.3) |
 | [mirai](https://github.com/mamoe/mirai) | [`v2.15.0-M1`](https://github.com/mamoe/mirai/releases/tag/v2.15.0-M1) |
 
-> **warning**
+> **Warning**
+> 
 > 此版本中对应的 mirai 版本是一个**非正式版本**，此版本依旧存在一些可能导致无法登录的情况，
 > 你依旧需要参阅 https://github.com/mamoe/mirai/issues/2570 来了解这些可能出现的问题以及它们的解决方案。
